@@ -3,7 +3,7 @@
 
 Name:           %{name}
 Version:        %{version}
-Release:        0%{?dist}
+Release:        1%{?dist}
 Summary:        Servicelog Tools
 
 Group:          System Environment/Base
@@ -49,6 +49,10 @@ of service operations that have been performed on the system.
 %{__rm} -rf $RPM_BUILD_ROOT
 
 %changelog
+* Thu Aug 14 2014  Vasant Hegde <hegdevasant at linux.vnet.ibm.com> 1.1.13
+- Grant permission to link with librtas library
+- Fixed couple of issues in build tool
+
 * Fri Mar 07 2014 Vasant Hegde <hegdevasant at linux.vnet.ibm.com> 1.1.12
 - Added platform validation
 
