@@ -1,3 +1,10 @@
+* Thu Aug 14 2014  Vasant Hegde <hegdevasant at linux.vnet.ibm.com> 1.1.13
+- Grant permission to link with librtas library
+- Fixed couple of issues in build tool
+
+* Fri Mar 07 2014 Vasant Hegde <hegdevasant at linux.vnet.ibm.com> 1.1.12
+- Added platform validation
+
 * Tue Jan 29 2013 Vasant Hegde <hegdevasant at linux.vnet.ibm.com> 1.1.11-3
 - log_repair_action : usage message format fix
 
